# uniTesTap

./: .clang-format  .gitignore  COPYING  Makefile.am  README.md  autogen.sh  configure.ac  uniTesTap.pc.in
.github/workflows/: build.yml
include/: tap.h  tapio.h  tapstruct.h  taptest.h  taputil.h
include/public/: tap.h
scripts/: check_format
src/: Makefile.am  internal.h  tap.c  tap_pipe.c  tap_print.c  tap_string.c  test_tap.c
tapcore/: Makefile.am  internal.h  tap.c  test_tap.c  testrun.c
tapcore/tests/: Makefile.am  internal.h  test_cmd.c  test_early_exit.c  test_metadata.c  test_mixed.c  test_stdio.c  test_tap.test.in  test_testplan_100.c  test_testplan_fail.c  test_testplan_pass.c  test_testplan_pass_fail.c  test_testplan_pass_pass.c
tapcore/tests/testdata/: test_cmd.golden  test_early_exit.golden  test_metadata.golden  test_mixed.golden  test_testplan_100.golden  test_testplan_fail.golden  test_testplan_pass.golden  test_testplan_pass_fail.golden  test_testplan_pass_pass.golden
tapio/: Makefile.am  tap_parse.c  tap_pipe.c  tap_print.c  tap_time.c  test_tap_parse.c  test_tap_time.c
tapstruct/: Makefile.am  tap_cmd.c  tap_string.c
